Added a couple of examples and exploration to the movement examples.
Two examples for prestructured matrices with fitting cost functions.
Two exmples for weight matrices, one with cutting states before moving bounds

Next steps:
consider cost
calculate difference for norms when finaly approxiamting

--- a/Code/Tests/Move_bounds.ipynb
+++ b/Code/Tests/Move_bounds.ipynb
@@ -26,6 +26,7 @@
     "import scipy.linalg \n",
     "import scipy.stats \n",
     "import tvsclib.utils as utils\n",
+    "import tvsclib.math as math\n",
     "\n",
     "from tvsclib.transformations.output_normal import OutputNormal\n",
     "from tvsclib.transformations.input_normal import InputNormal\n",
@@ -39,7 +40,10 @@
     "from structurednets.models.inceptionv3 import InceptionV3\n",
     "from structurednets.models.mobilenetv2 import MobilenetV2\n",
     "from structurednets.models.resnet18 import Resnet18\n",
-    "from structurednets.models.vgg16 import VGG16"
+    "from structurednets.models.vgg16 import VGG16\n",
+    "\n",
+    "import torchvision.models as models\n",
+    "import torch"
    ]
   },
   {
@@ -52,12 +56,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_sigmas(sigmas_causal,sigmas_anticausal,axes=None):\n",
+    "    if axes is None:\n",
+    "        fig, axes = plt.subplots(2,len(sigmas_causal))\n",
+    "    for i in range(len(sigmas_causal)):\n",
+    "        axes[0,i].plot(sigmas_causal[i],np.arange(len(sigmas_causal[i])),'x')\n",
+    "        axes[1,i].plot(sigmas_anticausal[i],np.arange(len(sigmas_anticausal[i])),'x')\n",
+    "    return axes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Create a tialor made matrix\n",
     "\n",
-    "Create mateices with combinations of orthogonal vectors such that we can create rank1 block matrices and combine these."
+    "Create mateices with combinations of orthogonal vectors such that we can create rank1 block matrices and combine these.\n",
+    "\n",
+    "As we have a rank1 matrix, all singular values except the largest are irrelevent. Therefore we have a cost function that penalizes all singlaur values that are smaller than a fraction of the largrest singular value"
    ]
   },
   {
@@ -91,19 +112,6 @@
     "    a+=dims_out[i];b+=dims_in[i]\n",
     "plt.figure()\n",
     "plt.matshow(matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "a=0;b=0\n",
-    "for i in range(len(dims_in)):\n",
-    "    print(np.linalg.norm(diag[a:a+dims_out[i],b:b+dims_in[i]])/(dims_in[i]*dims_out[i]))\n",
-    "    a+=dims_out[i];b+=dims_in[i]"
    ]
   },
   {
@@ -141,10 +149,8 @@
     "    return c\n",
     "\n",
     "\n",
-    "sys_move,input_dims,output_dims = move.move(system,1,cost_error_cut_rel,n_in=4,n_out=4)\n",
-    "sys_move,input_dims,output_dims = move.move(sys_move,1,cost_error_cut_rel,n_in=2,n_out=2)\n",
-    "sys_move,input_dims,output_dims = move.move(sys_move,1,cost_error_cut_rel,n_in=1,n_out=1)\n",
-    "#sys_move,input_dims,output_dims = move.move(sys_move,4,cost_error_cut_abs,n_in=1,n_out=1)\n",
+    "sys_move,input_dims,output_dims = move.move(system,3,cost_error_cut_rel,m_in=[4,2,1],m_out=[4,2,1])\n",
+    "\n",
     "\n",
     "\n",
     "utils.show_system(sys_move)\n",
@@ -156,10 +162,148 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(matrix, dims_in,dims_out)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test Weight matrix"
+    "# System from random matrix\n",
+    "\n",
+    "Here we will enforce a fixed number of states. When recovering the segementation we will have an cost function that refelcts this knowlege."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dims_in =  np.array([6, 3, 5, 2])*3\n",
+    "dims_out = np.array([2, 5, 3, 6])*3\n",
+    "eps_ident = 0.6\n",
+    "matrix = np.random.rand(np.sum(dims_out),np.sum(dims_in))\n",
+    "\n",
+    "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
+    "#S = SystemIdentificationSVD(T,epsilon=eps_ident)max_states_local\n",
+    "S = SystemIdentificationSVD(T,max_states_local=3)\n",
+    "system = MixedSystem(S)\n",
+    "print(system)\n",
+    "matrix = system.to_matrix()\n",
+    "plt.matshow(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dims_in_start = [sum(dims_in)//4]*4\n",
+    "dims_out_start = [sum(dims_out)//4]*4\n",
+    "T = ToeplitzOperator(matrix, dims_in_start, dims_out_start)\n",
+    "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
+    "system = MixedSystem(S)\n",
+    "utils.show_system(system)\n",
+    "\n",
+    "eps = 0.9*eps_ident\n",
+    "\n",
+    "def cost_error_cut_abs(s,shape,s_a,shape_a):\n",
+    "    c = np.sum(s[s<eps]**2)/(shape[0]*shape[1])\\\n",
+    "    +np.sum(s_a[s_a<eps]**2)/(shape_a[0]*shape_a[1])\n",
+    "    return c\n",
+    "\n",
+    "def cost_error_cut_number(s,shape,s_a,shape_a):\n",
+    "    v = 3\n",
+    "    c = np.sum(s[v:]**2)/(shape[0]*shape[1])\\\n",
+    "    +np.sum(s_a[v:]**2)/(shape_a[0]*shape_a[1])\n",
+    "    return c\n",
+    "\n",
+    "sys_move,input_dims,output_dims = move.move(system,3,cost_error_cut_number,m_in=[4,2,1],m_out=[4,2,1])\n",
+    "\n",
+    "utils.show_system(sys_move)\n",
+    "\n",
+    "print(dims_in)\n",
+    "print(np.array(sys_move.dims_in))\n",
+    "print(dims_out)\n",
+    "print(np.array(sys_move.dims_out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(matrix, dims_in,dims_out)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal)\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(matrix, dims_in_start,dims_out_start)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(matrix, sys_move.dims_in,sys_move.dims_out)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Weight matrix\n",
+    "\n",
+    "For this we introduce new cost functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_sum(s,shape,s_a,shape_a):\n",
+    "    c =np.sum(s)+np.sum(s_a)\n",
+    "    return c\n",
+    "\n",
+    "#cost relative to size\n",
+    "def cost_rel(s,shape,s_a,shape_a):\n",
+    "    c =np.sum(s**2)/(shape[0]*shape[1])+np.sum(s_a**2)/(shape_a[0]*shape_a[1])\n",
+    "    return c\n",
+    "\n",
+    "#scale the singlaur values to the biggest singuar values\n",
+    "def cost_scaled(s,shape,s_a,shape_a):\n",
+    "    c =np.sum(s/np.max(s))+np.sum(s_a/np.max(s_a))\n",
+    "    return c\n",
+    "\n",
+    "#cut relative to the biggest singular value and rescale to size\n",
+    "def cost_error_cut_rel(s,shape,s_a,shape_a):\n",
+    "    tau = 0.5\n",
+    "    c = np.sum(s[s<tau*np.max(s)]**2)/(shape[0]*shape[1])+\\\n",
+    "        np.sum(s_a[s_a<tau*np.max(s_a)]**2)/(shape_a[0]*shape_a[1])\n",
+    "    return c\n",
+    "\n",
+    "#def cost_error_cut_abs(s,shape,s_a,shape_a):\n",
+    "#    c = np.sum(s[s<eps]**2)+np.sum(s_a[s_a<eps]**2)\n",
+    "#    return c\n",
+    "\n",
+    "#cut at fixed epsilons and rescale to size\n",
+    "def cost_error_cut_abs(s,shape,s_a,shape_a):\n",
+    "    c = np.sum(s[s<eps]**2)/(shape[0]*shape[1])\\\n",
+    "    +np.sum(s_a[s_a<eps]**2)/(shape_a[0]*shape_a[1])\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AlexNet"
    ]
   },
   {
@@ -184,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stages = 20\n",
+    "stages = 10\n",
     "\n",
     "#set the dims\n",
     "d_in = output_mat.shape[1]\n",
@@ -213,48 +357,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def cost(s,shape,s_a,shape_a):\n",
-    "    c =np.sum(s)+np.sum(s_a)\n",
-    "    return c\n",
-    "\n",
-    "#cost relative to size\n",
-    "def cost_rel(s,shape,s_a,shape_a):\n",
-    "    print(\"shape:\",shape)\n",
-    "    print(\"shape_a:\",shape_a)\n",
-    "    c =np.sum(s**2)/(shape[0]*shape[1])+np.sum(s_a**2)/(shape_a[0]*shape_a[1])\n",
-    "    return c\n",
-    "  \n",
-    "def cost_check(s,shape,s_a,shape_a):\n",
-    "    print(shape[0]+shape_a[0])\n",
-    "    print(shape[1]+shape_a[1])\n",
-    "    return 0\n",
-    "    \n",
-    "\n",
-    "def cost_scaled(s,shape,s_a,shape_a):\n",
-    "    c =np.sum(s/np.max(s))+np.sum(s_a/np.max(s_a))\n",
-    "    return c\n",
-    "\n",
-    "def cost_error_cut_rel(s,shape,s_a,shape_a):\n",
-    "    tau = 0.5\n",
-    "    c = np.sum(s[s<tau*np.max(s)]**2)/(shape[0]*shape[1])+\\\n",
-    "        np.sum(s_a[s_a<tau*np.max(s_a)]**2)/(shape_a[0]*shape_a[1])\n",
-    "    return c\n",
-    "\n",
-    "def cost_error_cut_abs(s,shape,s_a,shape_a):\n",
-    "    c = np.sum(s[s<eps]**2)+np.sum(s_a[s_a<eps]**2)\n",
-    "    return c\n",
-    "\n",
     "eps_max = np.linalg.svd(output_mat[int(np.floor(output_mat.shape[0]/2)):,:int(np.floor(output_mat.shape[1]/2))],compute_uv=False)[0]\n",
-    "print(eps_max)\n",
     "eps = eps_max*0.5\n",
+    "print(\"eps:\",eps)\n",
     "\n",
-    "sys_move,input_dims,output_dims = move.move(system,3,cost_error_cut_rel,n_in=1,n_out=15)\n",
-    "#utils.show_system(sys_move)\n",
+    "sys_move,input_dims,output_dims = move.move(system,3,cost_error_cut_abs,m_in=[4,2,1],m_out=[100,50,25])\n",
     "\n",
-    "print(input_dims)\n",
-    "print(output_dims)"
+    "\n",
+    "#sys_move,input_dims,output_dims = move.move(system,1,cost_error_cut_abs,m_in=1,m_out=15)\n",
+    "#utils.show_system(sys_move)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hlines([np.sum(input_dims[:,0]),0],0,input_dims.shape[1]-1)\n",
+    "for i in range(input_dims.shape[0]-1):\n",
+    "    plt.hlines(np.sum(input_dims[:i+1,0]),0,input_dims.shape[1]-1)\n",
+    "    plt.plot(np.sum(input_dims[:i+1,:],axis=0),\"+-\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hlines([np.sum(output_dims[:,0]),0],0,output_dims.shape[1]-1)\n",
+    "for i in range(output_dims.shape[0]-1):\n",
+    "    plt.hlines(np.sum(output_dims[:i+1,0]),0,input_dims.shape[1]-1)\n",
+    "    plt.plot(np.sum(output_dims[:i+1,:],axis=0),\"+-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sys_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(2, len(dims_in)-1, figsize=(20,5))\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(output_mat, dims_in,dims_out)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(sys_move.to_matrix(), sys_move.dims_in,sys_move.dims_out)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
+    "\n",
+    "for i in range(len(dims_in)-1):\n",
+    "    ax[0,i].vlines(eps,0,100)\n",
+    "    ax[1,i].vlines(eps,0,100)"
    ]
   },
   {
@@ -267,13 +433,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for i in range(input_dims.shape[0]):\n",
-    "    plt.plot(np.sum(input_dims[:i+1,:],axis=0),\"+-\")"
+    "### Mobilenet\n",
+    "\n",
+    "\n",
+    "Here we also try how the system behaves if one cuts the singular values bevore moving the bounds"
    ]
   },
   {
@@ -282,7 +448,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(output_dims.shape[0]):\n",
+    "def get_mobilenet_target_mats():\n",
+    "    target_mats = []\n",
+    "    # Load the model\n",
+    "    model = models.mobilenet_v2(pretrained=True)\n",
+    "    # Put moel into eval mode\n",
+    "    model.eval()\n",
+    "    for layer in model.classifier:\n",
+    "        if isinstance(layer, torch.nn.Linear):\n",
+    "            # Obtain the weights of this layer\n",
+    "            weights = layer.weight.detach().numpy()\n",
+    "            target_mats.append(weights)\n",
+    "    return target_mats\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_mobilenet = get_mobilenet_target_mats()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stages = 10\n",
+    "\n",
+    "#set the dims\n",
+    "d_in = mat_mobilenet.shape[1]\n",
+    "boundaries = d_in/stages*np.arange(stages+1)\n",
+    "boundaries = np.round(boundaries).astype(int)\n",
+    "dims_in = boundaries[1:]-boundaries[:-1]\n",
+    "\n",
+    "d_out = mat_mobilenet.shape[0]\n",
+    "boundaries = d_out/stages*np.arange(stages+1)\n",
+    "boundaries = np.round(boundaries).astype(int)\n",
+    "dims_out = boundaries[1:]-boundaries[:-1]\n",
+    "\n",
+    "assert sum(dims_in)==d_in and sum(dims_out)==d_out\n",
+    "\n",
+    "T = ToeplitzOperator(mat_mobilenet, dims_in,dims_out)\n",
+    "S = SystemIdentificationSVD(T,epsilon=7e-1)\n",
+    "system = MixedSystem(S)\n",
+    "#approx =Approximation(system)\n",
+    "print(system)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we have cut the singular values. We can also see that this only leaves relativeley few state dims.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "eps_max = np.linalg.svd(mat_mobilenet[int(np.floor(mat_mobilenet.shape[0]/2)):,:int(np.floor(mat_mobilenet.shape[1]/2))],compute_uv=False)[0]\n",
+    "eps = eps_max*0.5\n",
+    "print(\"eps:\",eps)\n",
+    "\n",
+    "sys_move,input_dims,output_dims = move.move(system,3,cost_error_cut_abs,m_in=[24,12,6],m_out=[24,12,6])\n",
+    "\n",
+    "\n",
+    "#sys_move,input_dims,output_dims = move.move(system,1,cost_error_cut_abs,m_in=1,m_out=15)\n",
+    "#utils.show_system(sys_move)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hlines([np.sum(input_dims[:,0]),0],0,input_dims.shape[1]-1)\n",
+    "for i in range(input_dims.shape[0]-1):\n",
+    "    plt.hlines(np.sum(input_dims[:i+1,0]),0,input_dims.shape[1]-1)\n",
+    "    plt.plot(np.sum(input_dims[:i+1,:],axis=0),\"+-\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hlines([np.sum(output_dims[:,0]),0],0,output_dims.shape[1]-1)\n",
+    "for i in range(output_dims.shape[0]-1):\n",
+    "    plt.hlines(np.sum(output_dims[:i+1,0]),0,input_dims.shape[1]-1)\n",
     "    plt.plot(np.sum(output_dims[:i+1,:],axis=0),\"+-\")"
    ]
   },
@@ -293,6 +558,42 @@
    "outputs": [],
    "source": [
     "print(sys_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(2, len(dims_in)-1, figsize=(20,5))\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(mat_mobilenet, dims_in,dims_out)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(mat_mobilenet, sys_move.dims_in,sys_move.dims_out)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
+    "\n",
+    "for i in range(len(dims_in)-1):\n",
+    "    ax[0,i].vlines(eps,0,600)\n",
+    "    ax[1,i].vlines(eps,0,600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(2, len(dims_in)-1, figsize=(20,5))\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal = math.extract_sigmas(sys_move.to_matrix(), sys_move.dims_in,sys_move.dims_out)\n",
+    "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
+    "\n",
+    "for i in range(len(dims_in)-1):\n",
+    "    ax[0,i].vlines(eps,0,600)\n",
+    "    ax[1,i].vlines(eps,0,600)"
    ]
   },
   {
