Changes on move
Added the possiblity to calcaulate a cost based on the segmentation and the sigmas.
This makes it possible to optimize for the cost

--- a/Code/Tests/Move_bounds.ipynb
+++ b/Code/Tests/Move_bounds.ipynb
@@ -31,6 +31,8 @@
     "from tvsclib.transformations.output_normal import OutputNormal\n",
     "from tvsclib.transformations.input_normal import InputNormal\n",
     "from tvsclib.transformations.reduction import Reduction\n",
+    "from tvsclib.approximation import Approximation\n",
+    "\n",
     "\n",
     "from structurednets.asset_helpers import get_animal_classes_filepath\n",
     "from structurednets.extract_features import get_required_indices\n",
@@ -303,6 +305,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We change the structure of the objective: Instead of minimizing the approximation error without considering the cost we now use a differnt strategy.\n",
+    "We now fix the $\\epsilon$ and minimize the cost and do not consider the approxiamtion error.\n",
+    "\n",
+    "For this we use a global cost function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_computation(sigmas_causal,sigmas_anticausal,dims_in,dims_out):\n",
+    "    k = len(dims_in)\n",
+    "    dims_state_causal = np.zeros(k+1)\n",
+    "    dims_state_anticausal = np.zeros(k+1)\n",
+    "    #get the number of stages for each step\n",
+    "    for i in range(k-1):\n",
+    "        dims_state_causal[i+1] = np.count_nonzero(sigmas_causal[i]>eps)\n",
+    "        dims_state_anticausal[i+1] = np.count_nonzero(sigmas_anticausal[i]>eps)\n",
+    "    \n",
+    "    return math.cost(dims_in,dims_out,dims_state_causal,causal=True)\\\n",
+    "            +math.cost(dims_in,dims_out,dims_state_anticausal,causal=False,include_D=False)\n",
+    "        \n",
+    "    \n",
+    "def cost_computation_soft(sigmas_causal,sigmas_anticausal,dims_in,dims_out):\n",
+    "    #a distorted version of the cost: do not have a hard threshold but consider smaller values\n",
+    "    k = len(dims_in)\n",
+    "    dims_state_causal = np.zeros(k+1)\n",
+    "    dims_state_anticausal = np.zeros(k+1)\n",
+    "    #get the number of stages for each step\n",
+    "    for i in range(k-1):\n",
+    "        dims_state_causal[i+1] = np.sum(np.minimum(sigmas_causal[i]/eps,1))\n",
+    "        dims_state_anticausal[i+1] = np.sum(np.minimum(sigmas_anticausal[i]/eps,1))\n",
+    "    \n",
+    "    return math.cost(dims_in,dims_out,dims_state_causal,causal=True)\\\n",
+    "            +math.cost(dims_in,dims_out,dims_state_anticausal,causal=False,include_D=False)          "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### AlexNet"
    ]
   },
@@ -318,8 +363,7 @@
     "label_filepath = get_animal_classes_filepath()\n",
     "required_indices = get_required_indices(label_filepath)\n",
     "model = model_class(required_indices)\n",
-    "output_mat = model.get_optimization_matrix().detach().numpy()\n",
-    "\n"
+    "output_mat = model.get_optimization_matrix().detach().numpy()"
    ]
   },
   {
@@ -361,7 +405,7 @@
     "eps = eps_max*0.5\n",
     "print(\"eps:\",eps)\n",
     "\n",
-    "sys_move,input_dims,output_dims = move.move(system,3,cost_error_cut_abs,m_in=[4,2,1],m_out=[100,50,25])\n",
+    "sys_move,input_dims,output_dims = move.move(system,2,cost_computation,m_in=[2,1],m_out=[50,25],cost_global=True)\n",
     "\n",
     "\n",
     "#sys_move,input_dims,output_dims = move.move(system,1,cost_error_cut_abs,m_in=1,m_out=15)\n",
@@ -401,6 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#utils.show_system(sys_move)\n",
     "print(sys_move)"
    ]
   },
@@ -415,12 +460,22 @@
     "sigmas_causal,sigmas_anticausal = math.extract_sigmas(output_mat, dims_in,dims_out)\n",
     "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
     "\n",
+    "stages_start = sum([np.count_nonzero(sig>eps) for sig in sigmas_causal])\\\n",
+    "                +sum([np.count_nonzero(sig>eps) for sig in sigmas_anticausal])\n",
+    "\n",
     "sigmas_causal,sigmas_anticausal = math.extract_sigmas(sys_move.to_matrix(), sys_move.dims_in,sys_move.dims_out)\n",
     "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
     "\n",
+    "stages_moved = sum([np.count_nonzero(sig>eps) for sig in sigmas_causal])\\\n",
+    "                +sum([np.count_nonzero(sig>eps) for sig in sigmas_anticausal])\n",
+    "\n",
+    "\n",
     "for i in range(len(dims_in)-1):\n",
     "    ax[0,i].vlines(eps,0,100)\n",
-    "    ax[1,i].vlines(eps,0,100)"
+    "    ax[1,i].vlines(eps,0,100)\n",
+    "    \n",
+    "print(\"stages start: \",stages_start)\n",
+    "print(\"stages moved: \",stages_moved)"
    ]
   },
   {
@@ -430,6 +485,33 @@
    "outputs": [],
    "source": [
     "utils.check_dims(sys_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "approx_orig =Approximation(system)\n",
+    "approx_sys_orig=approx_orig.get_approxiamtion(eps)\n",
+    "\n",
+    "approx_move =Approximation(sys_move)\n",
+    "approx_sys_move=approx_move.get_approxiamtion(eps)\n",
+    "\n",
+    "print(\"Error regular:\",np.linalg.norm(output_mat-approx_sys_orig.to_matrix()))\n",
+    "print(\"Error moved:\",np.linalg.norm(output_mat-approx_sys_move.to_matrix()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Cost matrix:\",output_mat.size)\n",
+    "print(\"Cost regular:\",approx_sys_orig.cost())\n",
+    "print(\"Cost moved:\",approx_sys_move.cost())"
    ]
   },
   {
@@ -477,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stages = 10\n",
+    "stages = 15\n",
     "\n",
     "#set the dims\n",
     "d_in = mat_mobilenet.shape[1]\n",
@@ -493,7 +575,7 @@
     "assert sum(dims_in)==d_in and sum(dims_out)==d_out\n",
     "\n",
     "T = ToeplitzOperator(mat_mobilenet, dims_in,dims_out)\n",
-    "S = SystemIdentificationSVD(T,epsilon=7e-1)\n",
+    "S = SystemIdentificationSVD(T,epsilon=2e-1)\n",
     "system = MixedSystem(S)\n",
     "#approx =Approximation(system)\n",
     "print(system)"
@@ -514,10 +596,10 @@
    "source": [
     "\n",
     "eps_max = np.linalg.svd(mat_mobilenet[int(np.floor(mat_mobilenet.shape[0]/2)):,:int(np.floor(mat_mobilenet.shape[1]/2))],compute_uv=False)[0]\n",
-    "eps = eps_max*0.5\n",
+    "eps = eps_max*0.35\n",
     "print(\"eps:\",eps)\n",
     "\n",
-    "sys_move,input_dims,output_dims = move.move(system,3,cost_error_cut_abs,m_in=[24,12,6],m_out=[24,12,6])\n",
+    "sys_move,input_dims,output_dims = move.move(system,3,cost_computation,m_in=[24,12,6],m_out=[24,12,6],cost_global=True)\n",
     "\n",
     "\n",
     "#sys_move,input_dims,output_dims = move.move(system,1,cost_error_cut_abs,m_in=1,m_out=15)\n",
@@ -571,12 +653,21 @@
     "sigmas_causal,sigmas_anticausal = math.extract_sigmas(mat_mobilenet, dims_in,dims_out)\n",
     "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
     "\n",
+    "stages_start = sum([np.count_nonzero(sig>eps) for sig in sigmas_causal])\\\n",
+    "                +sum([np.count_nonzero(sig>eps) for sig in sigmas_anticausal])\n",
+    "\n",
     "sigmas_causal,sigmas_anticausal = math.extract_sigmas(mat_mobilenet, sys_move.dims_in,sys_move.dims_out)\n",
     "ax = plot_sigmas(sigmas_causal,sigmas_anticausal,axes=ax)\n",
     "\n",
+    "stages_moved = sum([np.count_nonzero(sig>eps) for sig in sigmas_causal])\\\n",
+    "                +sum([np.count_nonzero(sig>eps) for sig in sigmas_anticausal])\n",
+    "\n",
     "for i in range(len(dims_in)-1):\n",
     "    ax[0,i].vlines(eps,0,600)\n",
-    "    ax[1,i].vlines(eps,0,600)"
+    "    ax[1,i].vlines(eps,0,600)\n",
+    "    \n",
+    "print(\"stages start: \",stages_start)\n",
+    "print(\"stages moved: \",stages_moved)"
    ]
   },
   {
@@ -594,6 +685,42 @@
     "for i in range(len(dims_in)-1):\n",
     "    ax[0,i].vlines(eps,0,600)\n",
     "    ax[1,i].vlines(eps,0,600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "approx_orig =Approximation(system)\n",
+    "approx_sys_orig=approx_orig.get_approxiamtion(eps)\n",
+    "\n",
+    "approx_move =Approximation(sys_move)\n",
+    "approx_sys_move=approx_move.get_approxiamtion(eps)\n",
+    "\n",
+    "print(\"Error regular:\",np.linalg.norm(mat_mobilenet-approx_sys_orig.to_matrix()))\n",
+    "print(\"Error moved:\",np.linalg.norm(mat_mobilenet-approx_sys_move.to_matrix()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Cost matrix:\",mat_mobilenet.size)\n",
+    "print(\"Cost regular:\",approx_sys_orig.cost())\n",
+    "print(\"Cost moved:\",approx_sys_move.cost())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.show_system(sys_move)"
    ]
   },
   {
