Somne work on Thesis, especially SSS structure
-Illustrations of a system
-Description of SSS matrices
-Tikz version of H-Matrices

--- a/Thesis/diagrams/temptate.tex
+++ b/Thesis/diagrams/temptate.tex
@@ -1,5 +1,7 @@
 \documentclass[border=0.2cm]{standalone}
 
+\fontsize{10}{12}\selectfont
+
 \usepackage{pgfplots}
 \usepackage{tikz}
 \usetikzlibrary{calc}
