--- a/Thesis/diagrams/sequentially_sep.tex
+++ b/Thesis/diagrams/sequentially_sep.tex
@@ -12,15 +12,19 @@
 };
 
 \def\offset{0.27mm}
-\def\offdia{0.2mm}
-\def\lw{0.19mm}
-\def\lwblk{0.3mm}
+\def\offdia{0.3mm}
+\def\lw{0.9pt}
+\def\lwblk{0.7pt}
 
-\draw[color=black ,line width=\lwblk,densely dotted] (m-1-1.north west)rectangle (m-6-2.south east);
-\draw[color=black ,line width=\lwblk,densely dotted] (m-1-3.north west)rectangle (m-6-4.south east);
-\draw[color=black ,line width=\lwblk,densely dotted] (m-1-5.north west)rectangle (m-6-6.south east);
+\draw[color=black ,line width=\lwblk,densely dotted] (m-1-1.north west)rectangle (m-6-6.south east);
 
-\draw[color=black ,line width=\lwblk,densely dotted] (m-3-1.north west)rectangle (m-4-6.south east);
+%hor lines
+\draw[color=black ,line width=\lwblk,densely dotted] (m-3-1.north west) -- (m-3-6.north east);
+\draw[color=black ,line width=\lwblk,densely dotted] (m-5-1.north west) -- (m-5-6.north east);
+%vert lines
+\draw[color=black ,line width=\lwblk,densely dotted] (m-1-3.north west) -- (m-6-3.south west);
+\draw[color=black ,line width=\lwblk,densely dotted] (m-1-5.north west) -- (m-6-5.south west);
+
 
 %\draw[color=red  ,line width=\lw] ($(m-2-1.north west)+(-2*\offset,-\offdia)$)rectangle ($(m-6-1.south east)+(-\offdia,2*\offset)$);
 \draw[color=blue ,line width=\lw] ($(m-3-1.north west)+(-1*\offset,-\offdia)$)rectangle ($(m-6-2.south east)+(-\offdia,1*\offset)$);
