--- a/Thesis/diagrams/systems.tex
+++ b/Thesis/diagrams/systems.tex
@@ -1,14 +1,31 @@
 
+\tikzset{
+	style_system/.style={
+		color=black!80,
+		draw,
+		fill=white,
+	}
+}
 
-\def\boxsize{15mm}
-\def\rel_i{0.65}
+
+
+\tikzset{fontmatrices/.initial=\small}
+\tikzset{boxsize/.initial=9mm}
+
+
 \tikzstyle{signal} = [very thick]
 \tikzstyle{line_box} =[line width=1pt]
+
+\tikzset{signalflow/.style={very thick,
+		decoration={markings,mark=at position 0.5 with {\arrow{>}}},postaction={decorate}}}
 
 \tikzset{A/.initial=$A_{}$}
 \tikzset{B/.initial=$B_{}$}
 \tikzset{C/.initial=$C_{}$}
 \tikzset{D/.initial=$D_{}$}
+
+\def\boxsize{\pgfkeysvalueof{/tikz/boxsize}}
+\def\rel_i{0.65}
 
 
 \makeatletter
@@ -33,15 +50,20 @@
 	\anchor{east}{\pgf@x=\boxsize \pgf@y=0cm}
 	\anchor{west}{\pgf@x=-\boxsize \pgf@y=0cm}
 	\anchor{north}{\pgf@x=0cm \pgf@y=\boxsize}
+	
+	\anchor{x_out}{\pgf@x=0cm \pgf@y=-\boxsize}
+	\anchor{y}{\pgf@x=\boxsize \pgf@y=0cm}
+	\anchor{u}{\pgf@x=-\boxsize \pgf@y=0cm}
+	\anchor{x_in}{\pgf@x=0cm \pgf@y=\boxsize}
 
 
 	\backgroundpath{
 		\filldraw[line_box](-\boxsize,-\boxsize)rectangle(\boxsize,\boxsize);
 
-		\draw[signal][postaction = {decorate,decoration={markings,mark= at position 0.7 with {\arrow{>}}}}] 
+		\draw[signal][postaction = {decorate,decoration={markings,mark= at position 0.65 with {\arrow{>}}}}] 
 					(-\boxsize,0) -- (\boxsize,0);
 		\filldraw[draw=none,opacity=0.7](-5pt,-5pt)rectangle(5pt,5pt);
-		\draw[signal][postaction = {decorate,decoration={markings,mark= at position 0.3 with {\arrow{>}}}}] 
+		\draw[signal][postaction = {decorate,decoration={markings,mark= at position 0.35 with {\arrow{>}}}}] 
 					(0,\boxsize) -- (0,-\boxsize);
 		
 
@@ -52,11 +74,15 @@
 		\draw[signal][postaction = {decorate,decoration={markings,mark= at position 0.6 with {\arrow{>}}}}] 
 					(0,\rel_i*\boxsize) -- (\rel_i*\boxsize,0);
 
-\pgfsetcolor{black}
-		\pgftext[right,x=-1em,y=0.45*\boxsize] {\pgfkeysvalueof{/tikz/A}}
-		\pgftext[top,x=0.45*\boxsize,y=-1.3em] {\pgfkeysvalueof{/tikz/D}}
-		\pgftext[left,bottom,x=0.35*\boxsize,y=0.35*\boxsize] {\pgfkeysvalueof{/tikz/C}}
-		\pgftext[right,top,x=-0.35*\boxsize,y=-0.4*\boxsize] {\pgfkeysvalueof{/tikz/B}}
+		\pgfsetcolor{black}
+		\pgftext[right,x=-0.5em,y=0.4*\boxsize] 
+			{\pgfkeysvalueof{/tikz/fontmatrices} \pgfkeysvalueof{/tikz/A}}
+		\pgftext[top,left,x=0.05*\boxsize,y=-0.5em] 
+			{\pgfkeysvalueof{/tikz/fontmatrices} \pgfkeysvalueof{/tikz/D}}
+		\pgftext[left,bottom,x=0.35*\boxsize,y=0.35*\boxsize]
+			{\pgfkeysvalueof{/tikz/fontmatrices} \pgfkeysvalueof{/tikz/C}}
+		\pgftext[right,top,x=-0.35*\boxsize,y=-0.4*\boxsize]
+			{\pgfkeysvalueof{/tikz/fontmatrices} \pgfkeysvalueof{/tikz/B}}
 
     }
 }
